--- a/app/src/main/res/drawable/stop.xml
+++ b/app/src/main/res/drawable/stop.xml
@@ -1,4 +1,9 @@
-<vector android:height="24dp" android:viewportHeight="185"
-    android:viewportWidth="185" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M0,0h185v185H0V0z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+        android:width="24dp"
+        android:height="24dp"
+        android:viewportWidth="24.0"
+        android:viewportHeight="24.0">
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M6,6h12v12H6z"/>
 </vector>
