--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -21,12 +21,33 @@
 
     </ScrollView>
 
-    <SeekBar
-            android:id="@+id/seekbar_audio"
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:layout_marginTop="16dp"/>
+            android:layout_gravity="center_horizontal"
+            android:orientation="horizontal">
+        <TextView
+                android:id="@+id/timer_played"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="@string/zero_time"/>
+
+        <SeekBar
+                android:id="@+id/seekbar_audio"
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:layout_marginTop="16dp"/>
+        <TextView
+                android:id="@+id/timer_total"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="@string/zero_time"/>
+    </LinearLayout>
+
 
     <LinearLayout
             android:layout_width="match_parent"
