--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -47,6 +47,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
+            android:id="@+id/info_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -77,6 +78,16 @@
                 tools:text="Artist"/>
 
     </LinearLayout>
+
+    <Button
+            android:id="@+id/button_youtube_player"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="youtube"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/controls_container"
+            app:layout_constraintTop_toBottomOf="@id/info_container"/>
 
     <LinearLayout
             android:id="@+id/controls_container"
