--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -5,7 +5,6 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorBackground"
         android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -58,7 +57,7 @@
             android:layout_height="wrap_content"
             android:src="@drawable/youtube_button"
             android:contentDescription="Youtube"
-            android:background="@color/colorBackground"
+            android:background="@android:color/transparent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/info_container"
@@ -148,7 +147,7 @@
                 android:id="@+id/button_previous"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="@color/colorBackground"
+                android:background="@android:color/transparent"
                 android:layout_weight="1"
                 android:src="@drawable/prev_large"
                 android:contentDescription="@string/previous"/>
@@ -156,7 +155,7 @@
                 android:id="@+id/button_play"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@color/colorBackground"
+                android:background="@android:color/transparent"
                 android:layout_weight="1"
                 android:src="@drawable/play_circle"
                 android:contentDescription="@string/play"/>
@@ -165,7 +164,7 @@
                 android:id="@+id/button_next"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="@color/colorBackground"
+                android:background="@android:color/transparent"
                 android:layout_weight="1"
                 android:src="@drawable/next_large"
                 android:contentDescription="@string/next"/>
