--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -13,14 +13,11 @@
                 android:id="@+id/appbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+                android:theme="@style/Theme.AppCompat">
 
             <com.google.android.material.tabs.TabLayout
                     android:id="@+id/result_tabs"
-                    android:background="@android:color/white"
-                    app:tabTextColor="@android:color/black"
-                    app:tabSelectedTextColor="@color/colorPrimary"
-                    app:tabIndicatorColor="@color/colorPrimaryDark"
+                    android:theme="@style/Theme.AppCompat"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:tabMode="scrollable"/>
