--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -18,7 +18,7 @@
             <com.google.android.material.tabs.TabLayout
                     android:id="@+id/result_tabs"
                     android:theme="@style/Theme.AppCompat"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     app:tabMode="scrollable"/>
