Add artist image

--- a/app/src/main/res/layout/fragment_single_artist.xml
+++ b/app/src/main/res/layout/fragment_single_artist.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
@@ -16,11 +17,13 @@
             android:layout_marginBottom="20dp"
             tools:text="Artist"/>
 
-    <com.mikhaellopez.circularimageview.CircularImageView
+    <com.github.siyamed.shapeimageview.RoundedImageView
             android:id="@+id/single_artist_img"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_gravity="center"/>
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_gravity="center"
+            app:siRadius="6dp"
+            app:siSquare="true"/>
 
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/single_artist_list_grid_view"
