--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,8 @@
     <color name="colorLibraryButton">#002720</color>
     <color name="colorFavoritesButton">#004D40</color>
     <color name="colorPlaylistButton">#00695C</color>
-    <color name="colorSettingsButton">#26A69A</color>
+    <color name="colorSettingsButton">#00695C</color>
+    <!--<color name="colorSettingsButton">#26A69A</color>-->
     <color name="colorSeekBar">#00796B</color>
     <color name="colorBorderSeekBar">#757575</color>
     <color name="colorText">#FFFFFF</color>
