--- a/app/src/main/res/layout/item_track.xml
+++ b/app/src/main/res/layout/item_track.xml
@@ -1,38 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
+              xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
 
-    <RelativeLayout
-            android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:paddingTop="10dp"
             android:paddingBottom="10dp">
-
         <TextView
                 android:id="@+id/track_position"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="start"
-                android:layout_marginStart="20dp"
+                android:paddingLeft="10dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/track_title"
+                app:layout_constraintBottom_toBottomOf="parent"
                 tools:text="1"/>
 
         <TextView
                 android:id="@+id/track_title"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                tools:text="track"/>
+                app:layout_constraintTop_toTopOf="parent"
+                android:paddingLeft="10dp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toEndOf="@id/track_position"
+                app:layout_constraintBottom_toTopOf="@id/track_artist"
+                tools:text="Track"/>
+        <TextView
+                android:id="@+id/track_artist"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                app:layout_constraintTop_toBottomOf="@id/track_title"
+                app:layout_constraintStart_toEndOf="@id/track_position"
+                app:layout_constraintBottom_toBottomOf="parent"
+                tools:text="Artist"/>
 
-    </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:background="@android:color/darker_gray"/>
 
 </LinearLayout>
